<resources>
    <string name="app_name">Music Catalog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Светлана</string>
    <string name="nav_header_subtitle">svetlana.kashina.hse@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_list">List</string>
    <string name="action_tiles">Tiles</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_music_catalog">Music Catalog</string>
    <string name="menu_settings">Settings</string>

    <string name="write_name_string">type in username</string>
    <string name="string_user">Username:</string>
    <string name="string_fav">Favorites:</string>
    <string name="google_cloud_storage_link_string">Google Cloud Storage Link</string>
    <string name="paste_or_type_in_the_link_string">paste or type in the link</string>
    <string name="name_playlist_string">Name:</string>
    <string name="type_in_the_name_of_the_playlist_string">type in the name of the playlist</string>
    <string name="select_tracks_string">Select tracks</string>
    <string name="done_button_text">Done</string>
</resources>