<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/playlistNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/name_playlist_string" />

    <EditText
        android:id="@+id/playlistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:hint="@string/type_in_the_name_of_the_playlist_string" />

    <TextView
        android:id="@+id/selectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/select_tracks_string" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="bottom|end"
        android:text="@string/done_button_text">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>