<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/string_user" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:hint="@string/write_name_string" />

    <TextView
        android:id="@+id/linkText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/google_cloud_storage_link_string" />

    <EditText
        android:id="@+id/cloudStorageLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="20sp"
        android:hint="@string/paste_or_type_in_the_link_string" />

    <TextView
        android:id="@+id/favText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/string_fav" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/playlistsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="Playlists:" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>